JumpScript/tests/baselines/reference/importDeclWithExportModifier.errors.txt
tests/cases/compiler/importDeclWithExportModifier.jump(5,19): error TS2708: Cannot use namespace 'x' as a value.
tests/cases/compiler/importDeclWithExportModifier.jump(5,21): error TS2694: Namespace 'x' has no exported member 'c'.


==== tests/cases/compiler/importDeclWithExportModifier.jump (2 errors) ====
    module x {
        interface c {
        }
    }
    export import a = x.c;
                      ~
!!! error TS2708: Cannot use namespace 'x' as a value.
                        ~
!!! error TS2694: Namespace 'x' has no exported member 'c'.
    var b: a;
    